--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,27 @@
+@import url('https://fonts.googleapis.com/css2?family=Black+And+White+Picture&family=Gamja+Flower&display=swap');
+
 html, body {
   margin: 0;
   padding: 0;
 }
 canvas {
   display: block;
+}
+.botao-tela-inicial{
+  font-family: 'Gamja Flower', cursive;
+  /* font-family: 'Black And White Picture', sans-serif; */
+  font-size: 1.5rem;
+  background: #60649b;
+  color: #ffc5c9;
+  border: none;
+  border-radius: .75rem;
+  padding: 1rem 1.25rem;
+  letter-spacing: .25rem;
+  text-transform: uppercase;
+  box-shadow: 2px 2px 0px 1px #453341;
+}
+.botao-tela-inicial:hover{
+  color: #8c81b6;
+  background: #453341;
+  box-shadow: 2px 2px 0px 2px #ffc5c9;
 }
